capitalized acronyms in list.

--- a/doc-Scripting_Actions_in_CloudForms/topics/Virtual_Machine_Properties1.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/Virtual_Machine_Properties1.adoc
@@ -86,26 +86,26 @@ When using these items in a method, prefix them with `vm.`. For example: `vm.sto
 |Uncommitted Space |uncommitted_storage
 |Used Storage |used_storage
 |V Pct Used Disk Space |v_pct_used_disk_space
-|Vdi Available |vdi_available
-|Vdi Connection DNS Name |vdi_connection_dns_name
-|Vdi Connection Logon Server |vdi_connection_logon_server
-|Vdi Connection Name |vdi_connection_name
-|Vdi Connection Remote Ip Address |vdi_connection_remote_ip_address
-|Vdi Connection Session Name |vdi_connection_session_name
-|Vdi Connection Session Type |vdi_connection_session_type
-|Vdi Connection Url |vdi_connection_url
-|Vdi Endpoint Ip Address |vdi_endpoint_ip_address
-|Vdi Endpoint Mac Address |vdi_endpoint_mac_address
-|Vdi Endpoint Name |vdi_endpoint_name
-|Vdi Endpoint Type |vdi_endpoint_type
-|Vdi User Appdata |vdi_user_appdata
-|Vdi User DNS Domain |vdi_user_dns_domain
-|Vdi User Domain |vdi_user_domain
-|Vdi User Home Drive |vdi_user_home_drive
-|Vdi User Home Path |vdi_user_home_path
-|Vdi User Home Share |vdi_user_home_share
-|Vdi User Logon Time |vdi_user_logon_time
-|Vdi User Name |vdi_user_name
+|VDI Available |vdi_available
+|VDI Connection DNS Name |vdi_connection_dns_name
+|VDI Connection Logon Server |vdi_connection_logon_server
+|VDI Connection Name |vdi_connection_name
+|VDI Connection Remote IP Address |vdi_connection_remote_ip_address
+|VDI Connection Session Name |vdi_connection_session_name
+|VDI Connection Session Type |vdi_connection_session_type
+|VDI Connection URL |vdi_connection_url
+|VDI Endpoint IP Address |vdi_endpoint_ip_address
+|VDI Endpoint MAC Address |vdi_endpoint_mac_address
+|VDI Endpoint Name |vdi_endpoint_name
+|VDI Endpoint Type |vdi_endpoint_type
+|VDI User Appdata |vdi_user_appdata
+|VDI User DNS Domain |vdi_user_dns_domain
+|VDI User Domain |vdi_user_domain
+|VDI User Home Drive |vdi_user_home_drive
+|VDI User Home Path |vdi_user_home_path
+|VDI User Home Share |vdi_user_home_share
+|VDI User Logon Time |vdi_user_logon_time
+|VDI User Name |vdi_user_name
 |Vendor |vendor
 |Version |version
 |VMsafe Agent Address |vmsafe_agent_address
