--- a/doc-Scripting_Actions_in_CloudForms/topics/Host_Properties2.adoc
+++ b/doc-Scripting_Actions_in_CloudForms/topics/Host_Properties2.adoc
@@ -72,13 +72,13 @@ When using these items in a method, prefix them with host, such as
 
 |Enabled Run Level 6 Services |enabled_run_level_6_services
 
-|Enabled Tcp Inbound Ports |enabled_tcp_inbound_ports
+|Enabled TCP Inbound Ports |enabled_tcp_inbound_ports
 
-|Enabled Tcp Outbound Ports |enabled_tcp_outbound_ports
+|Enabled TCP Outbound Ports |enabled_tcp_outbound_ports
 
-|Enabled Udp Inbound Ports |enabled_udp_inbound_ports
+|Enabled UDP Inbound Ports |enabled_udp_inbound_ports
 
-|Enabled Udp Outbound Ports |enabled_udp_outbound_ports
+|Enabled UDP Outbound Ports |enabled_udp_outbound_ports
 
 |EVM Unique ID (Guid) |guid
 
