Changed the title of the NetApp Storage Integration Guide

--- a/doc-NetApp_Storage_Integration_Guide/master.adoc
+++ b/doc-NetApp_Storage_Integration_Guide/master.adoc
@@ -1,4 +1,4 @@
-=  NetApp Storage Integration Guide
+=  Integration with NetApp Storage
 CloudForms Documentation Team <cloudforms-docs@redhat.com>
 :imagesdir: images
 :vernum: 4.0
