--- a/doc-Release_Notes/register_cfme.adoc
+++ b/doc-Release_Notes/register_cfme.adoc
@@ -80,7 +80,7 @@ The Subscription Management Service you register with will provide your systems 
 
 === Updating Appliances
 
-The +Red Hat Updates+ page enables you to check for updates and update rgistered appliances.
+The +Red Hat Updates+ page enables you to check for updates and update registered appliances.
 
 . Navigate to +Configure → Configuration+. Select +Region+ in the accordion menu and click the +Red Hat Updates+ tab.
 . After registering, the following options are available in the +Appliance Updates+ section of the +Red Hat Updates+ tab:
