Edited typo and grammar.

--- a/doc-Red_Hat_CloudForms_REST_API/topics/Methods_and_related_URLs.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/Methods_and_related_URLs.adoc
@@ -15,4 +15,4 @@ The basic HTTP Methods used for the API are GET, POST, PUT, PATCH and DELETE.
 |=======================================================================
 
 
-[literal]+:collection+ represents specific CloudForm entities like services, hosts, and vms. 
+[literal]+:collection+ represents specific CloudForms entities such as services, hosts, and virtual machines. 
