--- a/doc-NetApp_Storage_Integration_Guide/Working_with_Storage.adoc
+++ b/doc-NetApp_Storage_Integration_Guide/Working_with_Storage.adoc
@@ -8,7 +8,7 @@ Use tags to describe your storage items based on your enterprise needs. For exam
 [arabic]
 . From +Storage+, navigate to the page of items, such as +File Shares+ that you want to tag.
 . Check the specific instances of the type of item you want to tag.
-. Click image:1941.png[Policy] +Policy+, and then image:2148.png[EditTags] +Edit Tags+.
+. Click +Policy+, and then +Edit Tags+.
 . Select a customer tag from the first dropdown, and then a value for the tag.
 . Select more tags or click +Save+ to save your changes.
 
