Added missing punctuation.

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
@@ -11,7 +11,7 @@ Click the [label]#Assignments# accordion, and click either [label]#Compute# or [
 * Use [label]#Compute# to assign a compute chargeback rate.
   You can assign chargeback rates to [label]#The Enterprise#, [label]#Selected Clusters#, [label]#Selected Infrastructure Providers#, or [label]#Tagged VMs and Instances#. 
 * Use [label]#Storage# to assign a storage chargeback rate.
-. You can assign chargeback rates to [label]#The Enterprise#, [label]#Selected Datastores#, or [label]#Tagged Datastores# 			
+. You can assign chargeback rates to [label]#The Enterprise#, [label]#Selected Datastores#, or [label]#Tagged Datastores#. 			
 . From the [label]#Basic Info# area, use the [label]#Assign To# list to select a type of assignee to assign the rate set to.
   The options displayed vary based on the type you selected. 
 . For each item to set, select the chargeback rate to use. 
