--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
@@ -22,7 +22,7 @@ Log in to your OpenStack dashboard to upload your CloudForms Management Engine A
 
 . Log in to the OpenStack dashboard.
 . In the +Project+ tab, navigate to +Compute → Images+.
-. Click the +Create Image+ button.
+. Click +Create Image+.
 . In +Name+, enter a name for the image.
 . From +Image Source+ list, select +Image Location+. Note that currently
   only images available via an HTTP URL are supported.
@@ -34,7 +34,7 @@ Log in to your OpenStack dashboard to upload your CloudForms Management Engine A
 . Leave the +Minimum Disk (GB)+ and +Minimum RAM (MB)+ fields empty.
 . Check the +Public+ box option to make the appliance available to all users.
 . Check the +Protected+ box to protect the image from being accidentally deleted.
-. Click the +Create Image+ button.
+. Click +Create Image+.
 
 You have successfully uploaded the CloudForms Management Engine Appliance.
 
