--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Installing_CloudForms.adoc
@@ -32,7 +32,7 @@ Log in to your OpenStack dashboard to upload your CloudForms Management Engine A
 . Specify the +Architecture+. For example, +i386+ for a 32-bit architecture
   or +x86-64+ for a 64-bit architecture.
 . Leave the +Minimum Disk (GB)+ and +Minimum RAM (MB)+ fields empty.
-. Check the +Public+ box option to make the appliance available to all users.
+. Check the +Public+ box to make the appliance available to all users.
 . Check the +Protected+ box to protect the image from being accidentally deleted.
 . Click +Create Image+.
 
