Changed all references to http://localhost:3000 to https://hostname.

--- a/doc-Red_Hat_CloudForms_REST_API/topics/add_event_vm.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/add_event_vm.adoc
@@ -26,6 +26,7 @@ POST /api/vms/1921
 {
   "success": true,
   "message": "Adding Event type=BadUserNameSessionEvent message=Cannot login user@test.domain",
-  "href": "http://localhost:3000/api/vms/1921"
+  "href": "https://hostname/api/vms/1921"
 }
 ----
+
