--- a/doc-Red_Hat_CloudForms_REST_API/topics/add_lifecycle_event_vm.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/add_lifecycle_event_vm.adoc
@@ -28,6 +28,7 @@ POST /api/vms/1921
 {
   "success": true,
   "message": "VM id:1921 name:'aab_demo_vm' adding lifecycle event=event_name message=Message about the event",
-  "href": "http://localhost:3000/api/vms/1921"
+  "href": "https://hostname/api/vms/1921"
 }
 ----
+
