--- a/doc-Red_Hat_CloudForms_REST_API/topics/add_service_catalog.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/add_service_catalog.adoc
@@ -16,8 +16,8 @@ POST /api/service_catalogs
         "name" : "Sample Service Catalog",
         "description" : "Description of Sample Service Catalog",
         "service_templates" : [
-          { "href" : "http://localhost:3000/api/service_templates/3" },
-          { "href" : "http://localhost:3000/api/service_templates/4" }
+          { "href" : "https://hostname/api/service_templates/3" },
+          { "href" : "https://hostname/api/service_templates/4" }
         ]
    }
 }
@@ -37,3 +37,4 @@ POST /api/service_catalogs
   ]
 }
 ----
+
