--- a/doc-Red_Hat_CloudForms_REST_API/topics/assign_service_templates.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/assign_service_templates.adoc
@@ -13,8 +13,8 @@ POST /api/service_catalogs/6/service_templates
 {
   "action" : "assign",
   "resources" : [
-    { "href" : "http://localhost:3000/api/service_templates/5" },
-    { "href" : "http://localhost:3000/api/service_templates/1" }
+    { "href" : "https://hostname/api/service_templates/5" },
+    { "href" : "https://hostname/api/service_templates/1" }
   ]
 }
 ----
@@ -29,16 +29,17 @@ POST /api/service_catalogs/6/service_templates
       "success": true,
       "message": "Assigning Service Template id:5 name:'template5'",
       "service_template_id": 5,
-      "service_template_href": "http://localhost:3000/api/service_templates/5",
-      "href": "http://localhost:3000/api/service_catalogs/6"
+      "service_template_href": "https://hostname/api/service_templates/5",
+      "href": "https://hostname/api/service_catalogs/6"
     },
     {
       "success": false,
       "message": "Service Template 1 is currently assigned to Service Catalog 3",
       "service_template_id": 1,
-      "service_template_href": "http://localhost:3000/api/service_templates/1",
-      "href": "http://localhost:3000/api/service_catalogs/6"
+      "service_template_href": "https://hostname/api/service_templates/1",
+      "href": "https://hostname/api/service_catalogs/6"
     }
   ]
 }
 ----
+
