--- a/doc-Red_Hat_CloudForms_REST_API/topics/assign_tags.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/assign_tags.adoc
@@ -29,21 +29,21 @@ POST /api/services/101/tags
     {
       "success": true,
       "message": "Assigning Tag: category:'location' name:'ny'",
-      "href": "http://localhost:3000/api/services/101",
+      "href": "https://hostname/api/services/101",
       "tag_category": "location",
       "tag_name": "ny"
     },
     {
       "success": true,
       "message": "Assigning Tag: category:'department' name:'finance'",
-      "href": "http://localhost:3000/api/services/101",
+      "href": "https://hostname/api/services/101",
       "tag_category": "department",
       "tag_name": "finance"
     },
     {
       "success": true,
       "message": "Assigning Tag: category:'environment' name:'dev'",
-      "href": "http://localhost:3000/api/services/101",
+      "href": "https://hostname/api/services/101",
       "tag_category": "environment",
       "tag_name": "dev"
     }
@@ -80,14 +80,14 @@ POST /api/services/101/tags
     {
       "success": true,
       "message": "Assigning Tag: category:'department' name:'finance'",
-      "href": "http://localhost:3000/api/services/101",
+      "href": "https://hostname/api/services/101",
       "tag_category": "department",
       "tag_name": "finance"
     },
     {
       "success": true,
       "message": "Assigning Tag: category:'location' name:'ny'",
-      "href": "http://localhost:3000/api/services/101",
+      "href": "https://hostname/api/services/101",
       "tag_category": "location",
       "tag_name": "ny"
     }
@@ -109,7 +109,7 @@ POST /api/services/101/tags
 {
   "action" : "assign",
   "resources" : [
-    { "href" : "http://localhost:3000/api/services/1/tags/49" }
+    { "href" : "https://hostname/api/services/1/tags/49" }
   ]
 }
 ----
@@ -123,11 +123,12 @@ POST /api/services/101/tags
     {
       "success": true,
       "message": "Assigning Tag: category:'department' name:'finance'",
-      "href": "http://localhost:3000/api/services/101",
+      "href": "https://hostname/api/services/101",
       "tag_category": "department",
       "tag_name": "finance",
-      "tag_href": "http://localhost:3000/api/tags/49"
+      "tag_href": "https://hostname/api/tags/49"
     }
   ]
 }
 ----
+
