--- a/doc-Red_Hat_CloudForms_REST_API/topics/delete_vm.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/delete_vm.adoc
@@ -26,9 +26,9 @@ DELETE /api/vms
 {
   "action" : "delete",
   "resources" : [
-    "href" : "http://localhost:3000/api/vms/348",
-    "href" : "http://localhost:3000/api/vms/349",
-    "href" : "http://localhost:3000/api/vms/3"
+    "href" : "https://hostname/api/vms/348",
+    "href" : "https://hostname/api/vms/349",
+    "href" : "https://hostname/api/vms/3"
   ]
 }
 ----
@@ -43,15 +43,15 @@ DELETE /api/vms
       "success": true,
       "message": "VM id:348 name:'aab-temp1' deleting",
       "task_id": 616,
-      "task_href": "http://localhost:3000/api/tasks/616",
-      "href": "http://localhost:3000/api/vms/348"
+      "task_href": "https://hostname/api/tasks/616",
+      "href": "https://hostname/api/vms/348"
     },
     {
       "success": true,
       "message": "VM id:349 name:'aab-temp2' deleting",
       "task_id": 617,
-      "task_href": "http://localhost:3000/api/tasks/617",
-      "href": "http://localhost:3000/api/vms/349"
+      "task_href": "https://hostname/api/tasks/617",
+      "href": "https://hostname/api/vms/349"
     }
   ]
 }
@@ -72,7 +72,7 @@ GET /api/tasks/616
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/tasks/616",
+  "href": "https://hostname/api/tasks/616",
   "id": 616,
   "name": "VM id:348 name:'aab-temp1' deleting",
   "state": "Finished",
@@ -83,3 +83,4 @@ GET /api/tasks/616
   "updated_on": "2015-05-05T19:33:40Z"
 }
 ----
+
