--- a/doc-Red_Hat_CloudForms_REST_API/topics/edit_service.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/edit_service.adoc
@@ -24,7 +24,7 @@ POST /api/services/101
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/services/101",
+  "href": "https://hostname/api/services/101",
   "id": 101,
   "name": "service_101",
   "description": "This is an updated description for the service 101",
@@ -35,3 +35,4 @@ POST /api/services/101
   "updated_at": "2015-04-16T22:17:15Z"
 }
 ----
+
