--- a/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_catalog.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_catalog.adoc
@@ -23,7 +23,7 @@ POST /api/service_catalog/7
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/service_catalogs/7",
+  "href": "https://hostname/api/service_catalogs/7",
   "id": 7,
   "name": "Sample Service Catalog",
   "description": "Updated Description of the Seventh Service Catalog",
@@ -31,9 +31,10 @@ POST /api/service_catalog/7
     "count": 1,
     "resources": [
       {
-        "href": "http://localhost:3000/api/service_catalogs/7/service_templates/3"
+        "href": "https://hostname/api/service_catalogs/7/service_templates/3"
       }
     ]
   }
 }
 ----
+
