--- a/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_catalogs.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_catalogs.adoc
@@ -14,11 +14,11 @@ POST /api/service_catalogs
    "action" : "edit",
    "resources" : [
      {
-       "href" : "http://localhost:3000/api/service_catalogs/3",
+       "href" : "https://hostname/api/service_catalogs/3",
        "description" : "Updated Description for Third Service Catalog"
      },
      {
-       "href" : "http://localhost:3000/api/service_catalogs/6",
+       "href" : "https://hostname/api/service_catalogs/6",
        "description" : "Updated Description for Sixth Service Catalog"
      }
    ]
@@ -44,3 +44,4 @@ POST /api/service_catalogs
   ]
 }
 ----
+
