--- a/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_template.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_template.adoc
@@ -24,7 +24,7 @@ POST /api/service_templates/2
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/service_templates/2",
+  "href": "https://hostname/api/service_templates/2",
   "id": 2,
   "name": "updated_svc_template_02",
   "description": "This is an updated description for service template 02",
@@ -37,3 +37,4 @@ POST /api/service_templates/2
   "service_template_catalog_id": 6
 }
 ----
+
