--- a/doc-Red_Hat_CloudForms_REST_API/topics/order_service.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/order_service.adoc
@@ -13,7 +13,7 @@ POST /api/service_catalogs/1/service_templates
 {
   "action" : "order",
   "resource" : {
-    "href" : "http://localhost:3000/api/service_templates/3",
+    "href" : "https://hostname/api/service_templates/3",
     "option_0_vm_target_name" : "test-vm-0001",
     "option_0_vm_target_hostname" : "test-vm-0001"
   }
@@ -54,3 +54,4 @@ POST /api/service_catalogs/1/service_templates
   ]
 }
 ----
+
