--- a/doc-Red_Hat_CloudForms_REST_API/topics/retire_service.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/retire_service.adoc
@@ -12,7 +12,7 @@ POST /api/services
 ----
 {
   "action" : "retire",
-  "resource" : { "href" : "http://localhost:3000/api/services/35" }
+  "resource" : { "href" : "https://hostname/api/services/35" }
 }
 ----
 
@@ -23,7 +23,7 @@ POST /api/services
 {
   "results" : [
     {
-      "href": "http://localhost:3000/api/services/95",
+      "href": "https://hostname/api/services/95",
       "id": 95,
       "name": "sample_service_95",
       "description": "Description for sample_service_95",
@@ -55,7 +55,7 @@ POST /api/services/95
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/services/95",
+  "href": "https://hostname/api/services/95",
   "id": 95,
   "name": "sample_service_95",
   "description": "Description for sample_service_95",
@@ -89,7 +89,7 @@ POST /api/services/93
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/services/93",
+  "href": "https://hostname/api/services/93",
   "id": 93,
   "name": "sample_service_93",
   "description": "Description for sample_service_93",
@@ -103,3 +103,4 @@ POST /api/services/93
   "retirement_warn": 7
 }
 ----
+
