--- a/doc-Red_Hat_CloudForms_REST_API/topics/retire_services.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/retire_services.adoc
@@ -13,9 +13,9 @@ POST /api/services
 {
   "action" : "retire",
   "resources" : [
-      { "href" : "http://localhost:3000/api/services/100" },
-      { "href" : "http://localhost:3000/api/services/101", "date" : "11/01/2015", "warn" : "4" },
-      { "href" : "http://localhost:3000/api/services/102", "date" : "11/02/2015", "warn" : "4" }
+      { "href" : "https://hostname/api/services/100" },
+      { "href" : "https://hostname/api/services/101", "date" : "11/01/2015", "warn" : "4" },
+      { "href" : "https://hostname/api/services/102", "date" : "11/02/2015", "warn" : "4" }
   ]
 }
 ----
@@ -65,3 +65,4 @@ POST /api/services
   ]
 }
 ----
+
