--- a/doc-Red_Hat_CloudForms_REST_API/topics/start_vm.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/start_vm.adoc
@@ -23,8 +23,8 @@ POST /api/vms/1921
   "success": true,
   "message": "VM id:1921 name:'aab_demo_vm' starting",
   "task_id": 610,
-  "task_href": "http://localhost:3000/api/tasks/610",
-  "href": "http://localhost:3000/api/vms/1921"
+  "task_href": "https://hostname/api/tasks/610",
+  "href": "https://hostname/api/vms/1921"
 }
 ----
 
@@ -40,7 +40,7 @@ GET /api/tasks/620
 
 ----
 {
-  "href": "http://localhost:3000/api/tasks/610",
+  "href": "https://hostname/api/tasks/610",
   "id": 610,
   "name": "VM id:1921 name:'aab_demo_vm' starting",
   "state": "Queued",
@@ -51,3 +51,4 @@ GET /api/tasks/620
   "updated_on": "2015-05-05T15:58:08Z"
 }
 ----
+
