--- a/doc-Red_Hat_CloudForms_REST_API/topics/unassign_tags.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/unassign_tags.adoc
@@ -28,14 +28,14 @@ POST /api/services/101/tags
     {
       "success": true,
       "message": "Unassigning Tag: category:'department' name:'finance'",
-      "href": "http://localhost:3000/api/services/101",
+      "href": "https://hostname/api/services/101",
       "tag_category": "department",
       "tag_name": "finance"
     },
     {
       "success": true,
       "message": "Unassigning Tag: category:'environment' name:'dev'",
-      "href": "http://localhost:3000/api/services/101",
+      "href": "https://hostname/api/services/101",
       "tag_category": "environment",
       "tag_name": "dev"
     }
@@ -72,7 +72,7 @@ POST /api/services/101/tags
     {
       "success": true,
       "message": "Unassigning Tag: category:'department' name:'finance'",
-      "href": "http://localhost:3000/api/services/101",
+      "href": "https://hostname/api/services/101",
       "tag_category": "department",
       "tag_name": "finance"
     }
@@ -108,11 +108,12 @@ POST /api/services/101/tags
     {
       "success": true,
       "message": "Unassigning Tag: category:'department' name:'finance'",
-      "href": "http://localhost:3000/api/services/101",
+      "href": "https://hostname/api/services/101",
       "tag_category": "department",
       "tag_name": "finance",
-      "tag_href": "http://localhost:3000/api/tags/49"
+      "tag_href": "https://hostname/api/tags/49"
     }
   ]
 }
 ----
+
