--- a/doc-Red_Hat_CloudForms_REST_API/topics/update_provider.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/update_provider.adoc
@@ -28,7 +28,7 @@ POST /api/providers/106
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/providers/106",
+  "href": "https://hostname/api/providers/106",
   "id": 106,
   "name": "rhevm102",
   "hostname": "rhevm102",
@@ -40,3 +40,4 @@ POST /api/providers/106
   "type": "EmsRedhat"
 }
 ----
+
