--- a/doc-Red_Hat_CloudForms_REST_API/topics/add_service_catalogs.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/add_service_catalogs.adoc
@@ -17,24 +17,24 @@ POST /api/service_catalogs
         "name" : "First Sample Service Catalog",
         "description" : "Description of First Sample Service Catalog",
         "service_templates" : [
-          { "href" : "http://localhost:3000/api/service_templates/1" },
-          { "href" : "http://localhost:3000/api/service_templates/2" }
+          { "href" : "https://hostname/api/service_templates/1" },
+          { "href" : "https://hostname/api/service_templates/2" }
         ]
       },
       {
         "name" : "Second Sample Service Catalog",
         "description" : "Description of Second Sample Service Catalog",
         "service_templates" : [
-          { "href" : "http://localhost:3000/api/service_templates/3" },
-          { "href" : "http://localhost:3000/api/service_templates/4" }
+          { "href" : "https://hostname/api/service_templates/3" },
+          { "href" : "https://hostname/api/service_templates/4" }
         ]
       },
       {
         "name" : "Third Sample Service Catalog",
         "description" : "Description of Third Sample Service Catalog",
         "service_templates" : [
-          { "href" : "http://localhost:3000/api/service_templates/5" },
-          { "href" : "http://localhost:3000/api/service_templates/6" }
+          { "href" : "https://hostname/api/service_templates/5" },
+          { "href" : "https://hostname/api/service_templates/6" }
         ]
       }
   ]
@@ -65,3 +65,4 @@ POST /api/service_catalogs
   ]
 }
 ----
+
