--- a/doc-Red_Hat_CloudForms_REST_API/topics/assign_tags_to_service_template.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/assign_tags_to_service_template.adoc
@@ -28,17 +28,18 @@ POST /api/service_templates/1/tags
     {
       "success": true,
       "message": "Assigning Tag: category:'location' name:'ny'",
-      "href": "http://localhost:3000/api/service_templates/1",
+      "href": "https://hostname/api/service_templates/1",
       "tag_category": "location",
       "tag_name": "ny"
     },
     {
       "success": true,
       "message": "Assigning Tag: category:'department' name:'finance'",
-      "href": "http://localhost:3000/api/service_templates/1",
+      "href": "https://hostname/api/service_templates/1",
       "tag_category": "department",
       "tag_name": "finance"
     }
   ]
 }
 ----
+
