--- a/doc-Red_Hat_CloudForms_REST_API/topics/delete_provider.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/delete_provider.adoc
@@ -31,8 +31,8 @@ POST /api/provider/105
   "success": true,
   "message": "Provider id:106 name:'rhevm102' deleting",
   "task_id": 625,
-  "task_href": "http://localhost:3000/api/tasks/625",
-  "href": "http://localhost:3000/api/providers/106"
+  "task_href": "https://hostname/api/tasks/625",
+  "href": "https://hostname/api/providers/106"
 }
 ----
 
@@ -50,7 +50,7 @@ GET /api/tasks/625
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/tasks/625",
+  "href": "https://hostname/api/tasks/625",
   "id": 625,
   "name": "Provider id:106 name:'rhevm102' deleting",
   "state": "Finished",
@@ -75,8 +75,8 @@ POST /api/providers
 {
   "action" : "delete",
   "resources" : [
-    { "href" : "http://localhost:3000/api/providers/107" },
-    { "href" : "http://localhost:3000/api/providers/108" }
+    { "href" : "https://hostname/api/providers/107" },
+    { "href" : "https://hostname/api/providers/108" }
   ]
 }
 ----
@@ -91,16 +91,17 @@ POST /api/providers
       "success": true,
       "message": "Provider id:107 name:'rhevm102' deleting",
       "task_id": 626,
-      "task_href": "http://localhost:3000/api/tasks/626",
-      "href": "http://localhost:3000/api/providers/107"
+      "task_href": "https://hostname/api/tasks/626",
+      "href": "https://hostname/api/providers/107"
     },
     {
       "success": true,
       "message": "Provider id:108 name:'rhevm103' deleting",
       "task_id": 627,
-      "task_href": "http://localhost:3000/api/tasks/627",
-      "href": "http://localhost:3000/api/providers/108"
+      "task_href": "https://hostname/api/tasks/627",
+      "href": "https://hostname/api/providers/108"
     }
   ]
 }
 ----
+
