--- a/doc-Red_Hat_CloudForms_REST_API/topics/delete_service_templates.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/delete_service_templates.adoc
@@ -13,8 +13,8 @@ POST /api/service_templates
 {
   "action" : "delete",
   "resources" : [
-    { "href" : "http://localhost:3000/api/service_templates/4" },
-    { "href" : "http://localhost:3000/api/service_templates/5" }
+    { "href" : "https://hostname/api/service_templates/4" },
+    { "href" : "https://hostname/api/service_templates/5" }
   ]
 }
 ----
@@ -28,13 +28,14 @@ POST /api/service_templates
     {
       "success": true,
       "message": "service_templates id: 4 deleting",
-      "href": "http://localhost:3000/api/service_templates/4"
+      "href": "https://hostname/api/service_templates/4"
     },
     {
       "success": true,
       "message": "service_templates id: 5 deleting",
-      "href": "http://localhost:3000/api/service_templates/5"
+      "href": "https://hostname/api/service_templates/5"
     }
   ]
 }
 ----
+
