--- a/doc-Red_Hat_CloudForms_REST_API/topics/delete_services.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/delete_services.adoc
@@ -13,9 +13,9 @@ POST /api/services
 {
   "action" : "delete",
   "resources" : [
-    { "href" : "http://localhost:3000/api/services/97" },
-    { "href" : "http://localhost:3000/api/services/98" },
-    { "href" : "http://localhost:3000/api/services/99" }
+    { "href" : "https://hostname/api/services/97" },
+    { "href" : "https://hostname/api/services/98" },
+    { "href" : "https://hostname/api/services/99" }
   ]
 }
 ----
@@ -29,18 +29,19 @@ POST /api/services
     {
       "success": true,
       "message": "services id: 97 deleting",
-      "href": "http://localhost:3000/api/services/97"
+      "href": "https://hostname/api/services/97"
     },
     {
       "success": true,
       "message": "services id: 98 deleting",
-      "href": "http://localhost:3000/api/services/98"
+      "href": "https://hostname/api/services/98"
     },
     {
       "success": true,
       "message": "services id: 99 deleting",
-      "href": "http://localhost:3000/api/services/99"
+      "href": "https://hostname/api/services/99"
     }
   ]
 }
 ----
+
