--- a/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_templates.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_templates.adoc
@@ -14,11 +14,11 @@ POST /api/service_templates
   "action" : "edit",
   "resources" : [
     {
-      "href" : "http://localhost:3000/api/service_templates/1",
+      "href" : "https://hostname/api/service_templates/1",
       "description" : "This is an updated description for the first sample service template"
     },
     {
-      "href" : "http://localhost:3000/api/service_templates/2",
+      "href" : "https://hostname/api/service_templates/2",
       "description" : "This is an updated description for the second sample service template"
     }
   ]
@@ -58,3 +58,4 @@ POST /api/service_templates
   ]
 }
 ----
+
