--- a/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_via_patch.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_via_patch.adoc
@@ -23,7 +23,7 @@ PATCH /api/services/90
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/services/90",
+  "href": "https://hostname/api/services/90",
   "id": 90,
   "name": "updated_service_90",
   "guid": "eb6fc61c-7c9b-11e4-8a3a-b8e85646e742",
@@ -35,3 +35,4 @@ PATCH /api/services/90
 ----
 
 NOTE: Note that the description attribute is no longer defined for this service.
+
