--- a/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_via_put.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/edit_service_via_put.adoc
@@ -21,7 +21,7 @@ PUT /api/services/90
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/services/90",
+  "href": "https://hostname/api/services/90",
   "id": 90,
   "name": "new_service_90",
   "description": "This is a new description for service 90",
@@ -32,3 +32,4 @@ PUT /api/services/90
   "updated_at": "2015-04-16T22:41:37Z"
 }
 ----
+
