--- a/doc-Red_Hat_CloudForms_REST_API/topics/edit_services.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/edit_services.adoc
@@ -14,11 +14,11 @@ POST /api/services
   "action" : "edit",
   "resources" : [
     {
-      "href" : "http://localhost:3000/api/services/81",
+      "href" : "https://hostname/api/services/81",
       "description" : "This is an updated description for service 81"
     },
     {
-      "href" : "http://localhost:3000/api/services/82",
+      "href" : "https://hostname/api/services/82",
       "description" : "This is an updated description for service 82"
     }
   ]
@@ -54,3 +54,4 @@ POST /api/services
   ]
 }
 ----
+
