--- a/doc-Red_Hat_CloudForms_REST_API/topics/order_services.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/order_services.adoc
@@ -14,17 +14,17 @@ POST /api/service_catalogs/2/service_templates
   "action" : "order",
   "resources" : [
     {
-      "href" : "http://localhost:3000/api/service_templates/3",
+      "href" : "https://hostname/api/service_templates/3",
       "option_1_vm_target_name" : "sample-vm-1201",
       "option_2_vm_target_hostname" : "sample-vm-1201"
     },
     {
-      "href" : "http://localhost:3000/api/service_templates/3",
+      "href" : "https://hostname/api/service_templates/3",
       "option_1_vm_target_name" : "sample-vm-1202",
       "option_2_vm_target_hostname" : "sample-vm-1202"
     },
     {
-      "href" : "http://localhost:3000/api/service_templates/4",
+      "href" : "https://hostname/api/service_templates/4",
       "option_1_vm_target_name" : "dev-vm1",
       "option_2_vm_target_hostname" : "dev-vm1",
       "option_3_vm_memory" : '16384'
@@ -117,3 +117,4 @@ POST /api/service_catalogs/2/service_templates
   ]
 }
 ----
+
