--- a/doc-Red_Hat_CloudForms_REST_API/topics/paging_queries.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/paging_queries.adoc
@@ -23,13 +23,13 @@ GET /api/vms?offset=0&limit=500
   "subcount": 500,
   "resources": [
     {
-      "href": "http://localhost:3000/api/vms/176",
+      "href": "https://hostname/api/vms/176",
       "id": 176,
       "name": "53 Zone1"
     },
     ...
     {
-      "href": "http://localhost:3000/api/vms/1575",
+      "href": "https://hostname/api/vms/1575",
       "id": 1575,
       "name": "VmEmpty-3de98f0f-c6f3-4f8b-a932-554713a61067"
     }
@@ -57,13 +57,13 @@ GET /api/vms?offset=500&limit=500
   "subcount": 500,
   "resources": [
     {
-      "href": "http://localhost:3000/api/vms/1574",
+      "href": "https://hostname/api/vms/1574",
       "id": 1574,
       "name": "VmEmpty-3e13ff43-6907-4a22-8f95-58aeb1bffa0b"
     },
     ...
     {
-      "href": "http://localhost:3000/api/vms/1076",
+      "href": "https://hostname/api/vms/1076",
       "id": 1076,
       "name": "VmEmpty-9a885181-7771-4f91-9805-245c7606d833"
     }
@@ -91,13 +91,13 @@ GET /api/vms?offset=1000&limit=500
   "subcount": 500,
   "resources": [
     {
-      "href": "http://localhost:3000/api/vms/1074",
+      "href": "https://hostname/api/vms/1074",
       "id": 1074,
       "name": "VmEmpty-9ab9e101-92b0-4b6b-864e-e196538da8a8"
     },
     ...
     {
-      "href": "http://localhost:3000/api/vms/575",
+      "href": "https://hostname/api/vms/575",
       "id": 575,
       "name": "VmEmpty-f251f135-01c8-4d44-b8e1-37b30844a9dd"
     }
@@ -125,13 +125,13 @@ GET /api/vms?offset=1500&limit=500
   "subcount": 412,
   "resources": [
     {
-      "href": "http://localhost:3000/api/vms/574",
+      "href": "https://hostname/api/vms/574",
       "id": 574,
       "name": "VmEmpty-f28912f3-b096-487f-9763-97b39b67364b"
     },
     ...
     {
-      "href": "http://localhost:3000/api/vms/1907",
+      "href": "https://hostname/api/vms/1907",
       "id": 1907,
       "name": "yy_vm"
     }
@@ -143,3 +143,4 @@ GET /api/vms?offset=1500&limit=500
 
 NOTE: In this last request, the *subcount* was less than the requested page size, thus
 denoting the last page of data being returned.
+
