--- a/doc-Red_Hat_CloudForms_REST_API/topics/refresh_provider.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/refresh_provider.adoc
@@ -22,6 +22,7 @@ POST /api/providers/105
 {
   "success": true,
   "message": "Provider id:105 name:'rhevm105' refreshing",
-  "href": "http://localhost:3000/api/providers/105"
+  "href": "https://hostname/api/providers/105"
 }
 ----
+
