--- a/doc-Red_Hat_CloudForms_REST_API/topics/scan_vm.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/scan_vm.adoc
@@ -23,8 +23,8 @@ POST /api/vms/1922
   "success": true,
   "message": "VM id:1922 name:'aab_test_vm' scanning",
   "task_id": 618,
-  "task_href": "http://localhost:3000/api/tasks/618",
-  "href": "http://localhost:3000/api/vms/1922"
+  "task_href": "https://hostname/api/tasks/618",
+  "href": "https://hostname/api/vms/1922"
 }
 ----
 
@@ -41,7 +41,7 @@ GET /api/tasks/618
 [source,json]
 ----
 {
-  "href": "http://localhost:3000/api/tasks/618",
+  "href": "https://hostname/api/tasks/618",
   "id": 618,
   "name": "VM id:1922 name:'aab_test_vm' scanning",
   "state": "Finished",
@@ -52,3 +52,4 @@ GET /api/tasks/618
   "updated_on": "2015-05-05T19:37:38Z"
 }
 ----
+
