--- a/doc-Red_Hat_CloudForms_REST_API/topics/set_owner_vm.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/set_owner_vm.adoc
@@ -25,6 +25,7 @@ POST /api/vms/1921
 {
   "success": true,
   "message": "VM id:1921 name:'aab_demo_vm' setting owner to 'admin'",
-  "href": "http://localhost:3000/api/vms/1921"
+  "href": "https://hostname/api/vms/1921"
 }
 ----
+
