--- a/doc-Red_Hat_CloudForms_REST_API/topics/suspend_vm.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/suspend_vm.adoc
@@ -23,7 +23,8 @@ POST /api/vms/1921
   "success": true,
   "message": "VM id:1921 name:'aab_demo_vm' suspending",
   "task_id": 620,
-  "task_href": "http://localhost:3000/api/tasks/620",
-  "href": "http://localhost:3000/api/vms/1921"
+  "task_href": "https://hostname/api/tasks/620",
+  "href": "https://hostname/api/vms/1921"
 }
 ----
+
