--- a/doc-Red_Hat_CloudForms_REST_API/topics/unassign_service_templates.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/topics/unassign_service_templates.adoc
@@ -13,9 +13,9 @@ POST /api/service_catalogs/6/service_templates
 {
   "action" : "unassign",
   "resources" : [
-    { "href" : "http://localhost:3000/api/service_templates/1" },
-    { "href" : "http://localhost:3000/api/service_templates/5" },
-    { "href" : "http://localhost:3000/api/service_templates/8" }
+    { "href" : "https://hostname/api/service_templates/1" },
+    { "href" : "https://hostname/api/service_templates/5" },
+    { "href" : "https://hostname/api/service_templates/8" }
   ]
 }
 ----
@@ -30,21 +30,22 @@ POST /api/service_catalogs/6/service_templates
       "success": false,
       "message": "Service Template 1 is not currently assigned to Service Catalog 3",
       "service_template_id": 1,
-      "service_template_href": "http://localhost:3000/api/service_templates/1",
-      "href": "http://localhost:3000/api/service_catalogs/6"
+      "service_template_href": "https://hostname/api/service_templates/1",
+      "href": "https://hostname/api/service_catalogs/6"
     },
     {
       "success": true,
       "message": "Unassigning Service Template id:5 name:'template5'",
       "service_template_id": 5,
-      "service_template_href": "http://localhost:3000/api/service_templates/5",
-      "href": "http://localhost:3000/api/service_catalogs/6"
+      "service_template_href": "https://hostname/api/service_templates/5",
+      "href": "https://hostname/api/service_catalogs/6"
     },
     {
       "success": false,
       "message": "Couldn't find ServiceTemplate with id=8",
-      "href": "http://localhost:3000/api/service_catalogs/6"
+      "href": "https://hostname/api/service_catalogs/6"
     }
   ]
 }
 ----
+
