Fix included imgs

--- a/doc-Release_Notes/register_cfme.adoc
+++ b/doc-Release_Notes/register_cfme.adoc
@@ -47,7 +47,7 @@ The +Red Hat Updates+ page enables you to register appliances. You will need the
 * Your Red Hat Account login or Red Hat Network Satellite login
 * A Red Hat subscription that covers your product
 
-image:6637.png[]
+image::6637.png[]
 
 . Navigate to +Configure → Configuration+. Select +Region+ in the accordion menu, and click the +Red Hat Updates+ tab.
 . In +Red Hat Software Updates+, click +Edit Registration+.
