--- a/doc-Release_Notes/ui_locale.adoc
+++ b/doc-Release_Notes/ui_locale.adoc
@@ -5,8 +5,10 @@ You can use this procedure to change the user interface locale to specify either
 
 . Navigate to +Configure → My Settings+ from the navigation bar.
 . In the +Visual+ tab, go to +Display Settings+.
-image:Cloudforms-SCH.png[]
-From the +Locale+ list, select the user interface locale to specify either +English+, +日本語+, or +简体中文+. The default is +English+.
+. From the +Locale+ list, select the user interface locale to specify either +English+, +日本語+, or +简体中文+. The default is +English+.
++
+image::Cloudforms-SCH.png[width="100%"]
++
 . You can also change the time zone from the +Time Zone+ list as required. The default is +(GMT+00:00) UTC+.
 . Click +Save+.
 
